2004-08-27  Andrew Haley  <aph@redhat.com>

	* java/lang/natClassLoader.cc (_Jv_FindClassInCache): Call
	klass->verify().
	* java/lang/natClass.cc (_Jv_LinkSymbolTable): Add debugging.
	(_Jv_LinkSymbolTable): Call Jv_LayoutClass on target class.

2004-08-27  Tom Tromey  <tromey@redhat.com>

	* java/lang/Class.h (_Jv_IsAssignableFromSlow): Declare as
	friend.
	* java/lang/natClass.cc (_Jv_CheckAssignment): New function.
	(_Jv_IsAssignableFromSlow): New function.
	Include VerifyError.h.
	* include/jvm.h (_Jv_CheckAssignment): Declare.

2004-08-18  Andrew Haley  <aph@redhat.com>

	* java/lang/VMCompiler.java (loadSharedLibrary): Add className
	argument.  Pass it to findClass instead of fileName.
	(compileClass): Pass class name to loadSharedLibrary.

2004-06-22  Andrew Haley  <aph@redhat.com>

	* testsuite/libjava.compile/compile.exp: Force indirect dispatch.

2004-06-15  Andrew Haley  <aph@redhat.com>

	* java/lang/natSystem.cc (getenv0): Don't assume environment
	variable is Latin 1 coded.

2004-06-07  Andrew Haley  <aph@redhat.com>

	* java/lang/System.java: (getenv0): New method.
	(getenv): Add security check.  Do the right thing.
	* java/lang/natSystem.cc (getenv0): New method.

2004-04-19    Andrew Haley  <aph@redhat.com>

	* gnu/gcj/runtime/NameFinder.java: Call waitFor() on the processes
	we destroy.

	* gnu/java/net/natPlainSocketImplPosix.cc (read): The value byte
	is returned as an int in the range 0 to 255.

2004-08-13  Tom Tromey  <tromey@redhat.com>

	* java/lang/natClass.cc (_Jv_LinkSymbolTable): Prepare the target
	class if it is interpreted.

2004-08-12  Tom Tromey  <tromey@redhat.com>

	* java/lang/natClassLoader.cc (_Jv_WaitForState): Updated.
	* java/lang/Class.h (_Jv_ResolveClassRef): Updated declaration.
	(Class::getSuperclass): Updated.
	(Class::getInterfaces): Likewise.
	(Class::size): Updated.
	(_Jv_LayoutClass): Updated declaration.
	* java/lang/natClass.cc (_Jv_ResolveClassRef): Changed interface.
	Synchronize on class.